Se realiza notificación de website

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <button type="button" id="notificar"> Notificarme!!</button>
-    <button type="button" id="notificar"> ver notificación</button>
+    <button type="button" id="verNotificacion"> ver notificación</button>
+    <script src="js/api.js"></script>
 </body>
 </html>
